[package]
name = "alethia-reth-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["full"]
full = [
    "dep:alethia-reth-chainspec",
    "dep:alethia-reth-evm",
    "dep:alloy-hardforks",
    "dep:reth-chainspec",
    "dep:reth-consensus",
    "dep:reth-consensus-common",
    "dep:reth-ethereum",
    "dep:reth-ethereum-consensus",
    "dep:reth-execution-types",
    "dep:reth-primitives",
]

[dependencies]
# Always available
alethia-reth-primitives = { path = "../primitives", default-features = false }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
reth-primitives-traits = { workspace = true }

# Only with "full"
alethia-reth-chainspec = { path = "../chainspec", default-features = false, optional = true }
alethia-reth-evm = { path = "../evm", optional = true }
alloy-hardforks = { workspace = true, optional = true }
reth-chainspec = { workspace = true, optional = true }
reth-consensus = { workspace = true, optional = true }
reth-consensus-common = { workspace = true, optional = true }
reth-ethereum = { workspace = true, optional = true }
reth-ethereum-consensus = { workspace = true, optional = true }
reth-execution-types = { workspace = true, optional = true }
reth-primitives = { workspace = true, optional = true }
