[package]
name = "alethia-reth-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["full", "std"]
full = [
    "dep:alethia-reth-chainspec",
    "dep:alethia-reth-evm",
    "dep:alloy-hardforks",
    "dep:reth-chainspec",
    "dep:reth-consensus",
    "dep:reth-consensus-common",
    "dep:reth-ethereum-consensus",
    "dep:reth-ethereum-primitives",
    "dep:reth-execution-types",
]
std = [
    "alethia-reth-chainspec?/std",
    "alethia-reth-evm?/std",
    "alethia-reth-primitives/std",
    "reth-chainspec?/std",
    "reth-consensus?/std",
    "reth-consensus-common?/std",
    "reth-ethereum-consensus?/std",
    "reth-ethereum-primitives?/std",
    "reth-execution-types?/std",
    "reth-primitives-traits/std",
]

[dependencies]
# Always available
alethia-reth-primitives = { path = "../primitives", default-features = false }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
reth-primitives-traits = { workspace = true }

# Only with "full"
alethia-reth-chainspec = { path = "../chainspec", default-features = false, optional = true }
alethia-reth-evm = { path = "../evm", default-features = false, optional = true }
alloy-hardforks = { workspace = true, optional = true }
reth-chainspec = { workspace = true, default-features = false, optional = true }
reth-consensus = { workspace = true, default-features = false, optional = true }
reth-consensus-common = { workspace = true, default-features = false, optional = true }
reth-ethereum-consensus = { workspace = true, default-features = false, optional = true }
reth-ethereum-primitives = { workspace = true, default-features = false, optional = true }
reth-execution-types = { workspace = true, default-features = false, optional = true }
