[package]
name = "alethia-reth-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
serde = ["dep:serde"]
std = ["alethia-reth-primitives/std", "reth-evm/std", "reth-revm/std"]

[dependencies]
alethia-reth-primitives = { path = "../primitives", default-features = false }
alloy-evm = { workspace = true }
alloy-primitives = { workspace = true }
reth-evm = { workspace = true, default-features = false }
reth-revm = { workspace = true, default-features = false }
revm-database-interface = { workspace = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true }
