[package]
name = "alethia-reth-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
prover = []

[dependencies]
alethia-reth-evm = { path = "../evm" }
alethia-reth-forks = { path = "../forks", default-features = false }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-execution-types = { workspace = true }
reth-primitives = { workspace = true }
reth-revm = { workspace = true }
revm-database-interface = { workspace = true }
