[package]
name = "alethia-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["serde"]
arbitrary = []
client = []
prover = []
serde = [
    "dep:serde",
    "alethia-reth-chainspec/serde",
    "alethia-reth-primitives/serde",
]

[dependencies]
alethia-reth-block = { path = "../block", features = ["rpc"] }
alethia-reth-chainspec = { path = "../chainspec" }
alethia-reth-consensus = { path = "../consensus" }
alethia-reth-db = { path = "../db" }
alethia-reth-evm = { path = "../evm" }
alethia-reth-payload = { path = "../payload" }
alethia-reth-primitives = { path = "../primitives", features = [
    "serde",
    "local-payload-builder",
] }
alethia-reth-rpc = { path = "../rpc" }
alloy-rpc-types-eth = { workspace = true }
eyre = { workspace = true }
reth-storage-api = { workspace = true }
reth-engine-local = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-network = { workspace = true }
reth-rpc = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
reth-evm-ethereum = { workspace = true }
