[package]
name = "alethia-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["serde"]
arbitrary = []
client = []
prover = []
serde = ["dep:serde", "alethia-reth-chainspec/serde", "alethia-reth-primitives/serde"]

[dependencies]
alethia-reth-block = { path = "../block" }
alethia-reth-chainspec = { path = "../chainspec" }
alethia-reth-consensus = { path = "../consensus" }
alethia-reth-db = { path = "../db" }
alethia-reth-evm = { path = "../evm" }
alethia-reth-network = { path = "../network" }
alethia-reth-node-builder = { path = "../node-builder" }
alethia-reth-payload = { path = "../payload" }
alethia-reth-primitives = { path = "../primitives", features = ["serde"] }
alethia-reth-rpc = { path = "../rpc" }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
reth = { workspace = true }
reth-db = { workspace = true }
reth-engine-local = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-execution-types = { workspace = true }
reth-exex = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-optimism-exex = { workspace = true }
reth-optimism-trie = { workspace = true, features = ["metrics"] }
reth-primitives-traits = { workspace = true }
reth-rpc = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-storage-api = { workspace = true }
reth-trie-common = { workspace = true }
reth-trie-db = { workspace = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[dev-dependencies]
reth-provider = { workspace = true, features = ["test-utils"] }
