[package]
name = "alethia-reth-payload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
alethia-reth-execution = { path = "../execution" }
alethia-reth-chainspec = { path = "../chainspec" }
alethia-reth-evm = { path = "../evm" }
alethia-reth-primitives = { path = "../primitives", features = ["serde"] }
alloy-consensus = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
eyre = { workspace = true }
reth = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-engine-local = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-primitives-traits = { workspace = true }
tracing = { workspace = true }
