[package]
name = "alethia-reth-payload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
alethia-reth-block = { path = "../block" }
alethia-reth-chainspec = { path = "../chainspec" }
alethia-reth-consensus = { path = "../consensus" }
alethia-reth-evm = { path = "../evm" }
alethia-reth-primitives = { path = "../primitives", features = ["serde"] }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true, features = ["keystore"] }
alloy-sol-types = { workspace = true }
eyre = { workspace = true }
reth-revm = { workspace = true }
reth-provider = { workspace = true }
reth-payload-primitives = { workspace = true }
op-alloy-flz = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-chainspec = { workspace = true }
reth-engine-local = { workspace = true }
reth-errors = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-node-api = { workspace = true }
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-transaction-pool = { workspace = true }
tracing = { workspace = true }
