[package]
name = "alethia-reth-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["serde", "net", "reth-codec", "serde-bincode-compat"]
local-payload-builder = ["dep:reth-engine-local"]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "alloy-rpc-types-eth/serde",
]
reth-codec = ["alethia-reth-consensus/reth-codec"]
serde-bincode-compat = ["alethia-reth-consensus/serde-bincode-compat"]
alloy-compat = ["alethia-reth-consensus/alloy-compat"]

net = ["dep:reth-engine-local", "dep:reth-node-api", "serde"]

[dependencies]
alethia-reth-consensus = { path = "../consensus", features = ["k256", "serde"] }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-serde = { workspace = true }
alethia-reth-chainspec = { path = "../chainspec", default-features = false }
reth-revm = { workspace = true }
reth-chain-state = { workspace = true }
reth-engine-local = { workspace = true, optional = true }
reth-node-api = { workspace = true, optional = true }
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-primitives = { workspace = true }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, features = ["base64"] }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alethia-reth-consensus = { path = "../consensus", features = [
    "k256",
    "serde",
    "reth-codec",
] }
reth-engine-local = { workspace = true }
