[package]
name = "alethia-reth-rpc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
